Aggiornato scheletro applicazione e scritti user validators
