# server/index.mjs
@@ -2,9 +2,8 @@ import express from "express";
 import cors from "cors";
 import "./loadEnvironment.mjs";
 import "express-async-errors";
-import utente from "./routes/utente.mjs";
-import proposta from "./routes/proposta.mjs";
-//import swaggerjsdoc from "swagger-jsdoc";
+import utente from "./routes/utentiRoutes.mjs";
+import proposta from "./routes/proposteRoutes.mjs";
 import swaggerui from "swagger-ui-express";
 import YAML from "yamljs";
 const swaggerFile = YAML.load('./swagger.yml');
