# server/routes/utente.mjs
@@ -1,69 +1,0 @@
-import express from "express";
-import db from "../db/conn.mjs";
-import { CancellationToken, ObjectId } from "mongodb";
-
-const router = express.Router();
-
-// Ottieni il nome dei primi 50 utenti del database [DEBUG REASONS]
-router.get("/", async (req, res) => {
-  let collection = await db.collection("Utenti");
-  let results = await collection.find({})
-    .limit(50)
-    .toArray();
-  res.send(results).status(200);
-});
-
-// Fetches the latest posts
-router.get("/latest", async (req, res) => {
-  let collection = await db.collection("Utenti");
-  let results = await collection.aggregate([
-    {"$project": {"author": 1, "title": 1, "tags": 1, "date": 1}},
-    {"$sort": {"date": -1}},
-    {"$limit": 3}
-  ]).toArray();
-  res.send(results).status(200);
-});
-
-// Get a single post
-router.get("/:id", async (req, res) => {
-  let collection = await db.collection("posts");
-  let query = {_id: ObjectId(req.params.id)};
-  let result = await collection.findOne(query);
-
-  if (!result) res.send("Not found").status(404);
-  else res.send(result).status(200);
-});
-
-// Aggiungi un nuovo utente alla collection utenti
-router.post("/", async (req, res) => {
-  let collection = await db.collection("Utenti");
-  let newDocument = req.body;
-  newDocument.date = new Date();
-  let result = await collection.insertOne(newDocument);
-  res.send(result).status(204);
-});
-
-// Update the post with a new comment
-router.patch("/comment/:id", async (req, res) => {
-  const query = { _id: ObjectId(req.params.id) };
-  const updates = {
-    $push: { comments: req.body }
-  };
-
-  let collection = await db.collection("posts");
-  let result = await collection.updateOne(query, updates);
-
-  res.send(result).status(200);
-});
-
-// Delete an entry
-router.delete("/:id", async (req, res) => {
-  const query = { _id: ObjectId(req.params.id) };
-
-  const collection = db.collection("posts");
-  let result = await collection.deleteOne(query);
-
-  res.send(result).status(200);
-});
-
-export default router;
